user sign up test passed

--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -4,5 +4,5 @@
   Username: <input type="text" name="username">
   Password: <input type="password" name="password">
   Password Confirmation: <input type="password" name="password_confirmation">
-  <input type="submit" name="Sign Up">
+  <input type="submit" value="Sign up">
 </form>
