--- a/app/views/_header.erb
+++ b/app/views/_header.erb
@@ -9,6 +9,9 @@
         <input type="hidden" name="_method" value="delete">
         <input type="submit" value="Sign out">
       </form>
+      <form id="compose-peep-button" action="/peeps" method="get">
+        <input type="submit" value="Compose a Peep">
+      </form>
     <% else %>
       <a href='/sign_up' id='sign-up' class='button'>Sign up</a>
       <a href='/sign_in' id='sign-in' class='button'>Sign in</a>      
