--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,10 @@
-Current links:
-<ul>
+<table class="peeps-table">
+  <th>Latest peeps:</th>
   <% @last_ten_peeps.each_with_index do |peep, i| %>
-    <%= "#{i+1}. #{User.first(id: peep.user_id).username} peeped: #{peep.peep_text} at #{peep.peep_timestamp.strftime("%H:%M on %A %B %d %Y")}" %>
+    <% user = User.first(id: peep.user_id) %>
+    <tr class="peeps-user"><td><%= "#{user.name} (#{user.username}) peeped:" %></td></tr>
+    <tr class="peep-text"><td><%= "#{peep.peep_text}" %></td></tr>
+    <tr class="peep-time"><td><%= "at #{peep.peep_timestamp.strftime("%H:%M on %A %B %d %Y")}" %></td></tr>
   <% end %>
-</ul>
-
+</table>
 Also link to see older peeps
