test for respond to peep capybara finds link

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,8 +5,8 @@
     <tr class="peeps-user"><td><%= "#{user.name} (#{user.username}) peeped:" %></td></tr>
     <tr class="peep-text"><td><%= "#{peep.peep_text}" %></td></tr>
     <tr class="peep-time"><td><%= "at #{peep.peep_timestamp.strftime("%H:%M on %A %B %d %Y")}" %></td></tr>
-    <tr class="peep-response-link"><td><li><a name=<%= "respond_#{i}" %> 
-              href="<%= "/peeps/respond/#{peep.id}" %>"><%= "respond" %></a></li></td></tr>
+    <tr class="peep-response-link"><td><li>
+            <a href="<%= "/peeps/respond/#{peep.id}" %>" value=<%= "respond_#{i}" %>><%= "respond" %></a></li></td></tr>
   <% end %>
 </table>
 Also link to see older peeps
