--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,8 +5,8 @@
     <tr class="peeps-user"><td><%= "#{user.name} (#{user.username}) peeped:" %></td></tr>
     <tr class="peep-text"><td><%= "#{peep.peep_text}" %></td></tr>
     <tr class="peep-time"><td><%= "at #{peep.peep_timestamp.strftime("%H:%M on %A %B %d %Y")}" %></td></tr>
-    <tr class="peep-response-link"><td><li>
-            <a href="<%= "/peeps/create_reply/#{peep.id}" %>"><%= "reply" %></a></li></td></tr>
+    <tr class="peep-response-link"><td>
+            <a href="<%= "/peeps/create_reply/#{peep.id}" %>"><%= "reply" %></a></td></tr>
     <% reply = Reply.all(peep_id: peep.id, order: [:reply_timestamp.asc]) %>
     <% reply.each do |reply| %>
       <% user = User.first(id: reply.user_id) %>
