--- a/app/views/_header.erb
+++ b/app/views/_header.erb
@@ -1,8 +1,8 @@
 <header>
   <section id="logo">ChitterAndy
     <% if current_user %>  
-      <span id="welcome-message"><p>
-        You are currently signed in as <%= current_user.username %></p></span>
+      <span id="welcome-message">
+        You are currently signed in as <%= current_user.username %></span>
       </section>
       <section id="user-links">
         <form id="sign-out" action="/sessions" method="post">
