--- a/app/public/css/application.css
+++ b/app/public/css/application.css
@@ -20,21 +20,101 @@ header {
   header #logo {
     display: flex;
     font-size: 2em;
+    margin-left: 50px;
   }
 
-    header #logo #welcome-message {
+    #welcome-message {
       font-size: 1em;
     }
 
-  header #user-links {
+    #user-links {
     flex: 1;
     -webkit-flex: 1;
     text-align: right;
-  }
+    }
 
-table {
+    #sign-up, #sign-in {
+      border-radius: 5px;
+      border: 2px solid #6495ED;
+      background-color: #BCD2EE;
+      height: 30px;
+      width: 100px;
+      margin-top: 5px;
+      margin-bottom: 25px;
+      margin-right: 30px;
+      text-align: center;
+      font-size: 70%;
+      }
+
+      #sign-in {
+        margin-left: 30px;
+      }
+
+      #sign-up {
+        margin-left: 550px;
+      }
+
+#peeps-table {
+  margin-top: 20px;
+  margin-left: 50px;
+  width: 800px;
+  border-style: solid;
   border-width: 2px;
   border-color: DarkOliveGreen;
   font-size: 1em;
   padding: 5px;
+}
+
+#peep-user, #reply-user {
+  width: 75px;
+  font-size: 70%;
+  padding: 5px;
+  text-align: left;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: DarkOliveGreen;
+}
+
+#peep-text, #reply-text {
+  padding: 5px;
+  text-align: left;
+}
+
+#peep-time, #reply-time {
+  font-size: 70%;
+  padding: 3px;
+  text-align: right;
+}
+
+#peep-reply {
+  width: 100px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: DarkOliveGreen;
+  text-align: center; 
+}
+
+#peep-reply-link {
+      border-radius: 5px;
+      border: 2px solid #6495ED;
+      background-color: #BCD2EE;
+      margin: 10px;
+      text-align: center;
+      font-size: 70%;
+      width:  70px;
+      height: 30px;
+}
+
+#reply-user { 
+  padding-left:  80px;
+  }
+
+#reply-text {
+  padding-left: 80px;
+  font-style: italic;
+  font-size: 90%;
+}
+
+#reply-time {
+  padding-right: 105px;
 }
