--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,18 +1,18 @@
-<table class="peeps-table">
-  <th>Latest peeps:</th>
+<table id="peeps-table">
+  <th colspan="3">Latest peeps:</th>
   <% @last_ten_peeps.each_with_index do |peep, i| %>
     <% user = User.first(id: peep.user_id) %>
-    <tr class="peeps-user"><td><%= "#{user.name} (#{user.username}) peeped:" %></td>
-      <td class="peep-response-link" rowspan="3">
-        <a href="<%= "/peeps/create_reply/#{peep.id}" %>"><%= "reply" %></a></td></tr>
-    <tr class="peep-text"><td><%= "#{peep.peep_text}" %></td></tr>
-    <tr class="peep-time"><td><%= "at #{peep.peep_timestamp.strftime("%H:%M on %A %B %d %Y")}" %></td></tr>
+    <tr><td id="peep-user"><%= "#{user.name} (#{user.username}) peeped:" %></td>
+      <td id="peep-text"><%= "#{peep.peep_text}" %></td>
+      <td id="peep-reply" rowspan="2">
+        <a id="peep-reply-link" href="<%= "/peeps/create_reply/#{peep.id}" %>"><%= "reply" %></a></td></tr>
+    <tr><td colspan="2" id="peep-time"><%= "at #{peep.peep_timestamp.strftime("%H:%M on %A %B %d %Y")}" %></td></tr>
     <% reply = Reply.all(peep_id: peep.id, order: [:reply_timestamp.asc]) %>
     <% reply.each do |reply| %>
       <% user = User.first(id: reply.user_id) %>
-      <tr class="response-user"><td><%= "#{user.name} (#{user.username}) replied:" %></td></tr>
-      <tr class="response-text"><td><%= "#{reply.reply_text}" %></td></tr>
-      <tr class="response-time"><td><%= "at #{reply.reply_timestamp.strftime("%H:%M on %A %B %d %Y")}" %></td></tr>
+      <tr><td id="reply-user"><%= "#{user.name} (#{user.username}) replied:" %></td>
+          <td colspan="2" id="reply-text"><%= "#{reply.reply_text}" %></td></tr>
+      <tr><td colspan="3" id="reply-time"><%= "at #{reply.reply_timestamp.strftime("%H:%M on %A %B %d %Y")}" %></td></tr>
     <% end %>
   <% end %>
 </table>
