--- a/app/public/css/application.css
+++ b/app/public/css/application.css
@@ -56,8 +56,9 @@ header {
 
 #peeps-table {
   margin-top: 20px;
-  margin-left: 50px;
-  width: 800px;
+  margin-left: auto;
+  margin-right: auto; 
+  width: 80%;
   border-style: solid;
   border-width: 2px;
   border-color: DarkOliveGreen;
@@ -66,7 +67,7 @@ header {
 }
 
 #peep-user, #reply-user {
-  width: 75px;
+  width: 10%;
   font-size: 70%;
   padding: 5px;
   text-align: left;
@@ -78,43 +79,53 @@ header {
 #peep-text, #reply-text {
   padding: 5px;
   text-align: left;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: DarkOliveGreen;
 }
 
 #peep-time, #reply-time {
-  font-size: 70%;
+  width: 15%;
   padding: 3px;
   text-align: right;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: DarkOliveGreen;
+}
+
+#peep-time {
+  font-size: 70%;
 }
 
 #peep-reply {
-  width: 100px;
-  border-style: solid;
-  border-width: 2px;
-  border-color: DarkOliveGreen;
+  width: 10%;
+  height: 40px;
   text-align: center; 
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: DarkOliveGreen;
 }
 
 #peep-reply-link {
       border-radius: 5px;
       border: 2px solid #6495ED;
       background-color: #BCD2EE;
-      margin: 10px;
-      text-align: center;
-      font-size: 70%;
-      width:  70px;
-      height: 30px;
+      font-size: 80%;
+      text-decoration: none;
+      padding: 5px;
 }
 
-#reply-user { 
-  padding-left:  80px;
-  }
-
 #reply-text {
-  padding-left: 80px;
   font-style: italic;
   font-size: 90%;
 }
 
 #reply-time {
-  padding-right: 105px;
+  font-size: 60%
+}
+
+#reply-offset, #reply-link-offset {
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: DarkOliveGreen;
 }
