--- a/app/views/_header.erb
+++ b/app/views/_header.erb
@@ -1,7 +1,7 @@
 <header>
   <section id="logo">ChitterAndy
     <% if current_user %>  
-      <span id="welcome-message">
+      <span id="welcome-message"><br>
         You are currently signed in as <%= current_user.username %></span>
   </section>
   <section id="user-links">
