--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,8 @@
     <title>ChitterAndy</title>
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/application.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/peeps_table.css">
   </head>
 
   <body>
