--- a/app/views/compose_peep.erb
+++ b/app/views/compose_peep.erb
@@ -1,4 +1,4 @@
-<form id="compose-peep" action='/peeps/post' method="post">
+<form id="compose-peep" action='/peeps/post_peep' method="post">
   Compose your peep (try to keep below 140ish characters)
   <input type="submit" value="Post your peep">
   <input type="hidden" name="user_id" value=<%= "#{@user_id}" %>>
