--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/peeps_table.css">
   </head>
-
-  <body>
-    
+  <header>
     <%= erb :_header %>
-
+  </header>
+  <body>
     <%= erb :_flash %>
 
     <%= yield %>
