--- a/app/views/sign_in.erb
+++ b/app/views/sign_in.erb
@@ -1,5 +1,5 @@
 To log in please enter the following information;
-<form action="/sign_in" method="post">
+<form action="/sessions/sign_in" method="post">
   Email: <input name="email" type="text">
   Password: <input name="password" type="password">
   <input type="submit" value="Sign in now">
