--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,4 +1,4 @@
-<form action="/registration" method="post">
+<form action="/sessions/registration" method="post">
   Email: <input type="text" name="email">
   Name: <input type="text" name="name">
   Username: <input type="text" name="username">
