--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/application.css">
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/flashnotices.css"> 
     <link rel="stylesheet" href="/css/peeps_table.css">
+    <link rel="stylesheet" href="/css/fieldset.css">    
   </head>
   <header>
     <%= erb :_header %>
