--- a/app/public/css/application.css
+++ b/app/public/css/application.css
@@ -1,10 +1,11 @@
 body {
-  background-color: Gainsboro;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Helvetica;
   font-size: 1em;
   height: auto;
-  padding: 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 
 
 
