--- a/app/views/_flash.erb
+++ b/app/views/_flash.erb
@@ -1,14 +1,16 @@
-<% if flash[:errors] && !flash[:errors].empty? %>
-  Sorry, there were the following problems.
-  <ul id="errors">
-    <% flash[:errors].each do |error| %>
-      <li><%= error %></li>
-      <% end %>     
-  </ul>
-<% end %>
+<section id="flash">
+  <% if flash[:errors] && !flash[:errors].empty? %>
+    Sorry, there were the following problems.
+    <ul id="errors">
+      <% flash[:errors].each do |error| %>
+        <li><%= error %></li>
+        <% end %>     
+    </ul>
+  <% end %>
 
-<% if flash[:notice] %>
-  <section id="notice">
-    <%= flash[:notice] %>
-  </section>
-<% end %>
+  <% if flash[:notice] %>
+    <section id="notice">
+      <%= flash[:notice] %>
+    </section>
+  <% end %>
+</section>
