--- a/app/views/sign_in.erb
+++ b/app/views/sign_in.erb
@@ -1,6 +1,8 @@
-To log in please enter the following information;
 <form action="/sessions/sign_in" method="post">
-  Email: <input name="email" type="text">
-  Password: <input name="password" type="password">
-  <input type="submit" value="Sign in now">
+  <fieldset>
+    <legend>Sign in to Chitter</legend>
+    <label>Email:</label><input name="email" type="text"><br>
+    <label>Password:</label><input name="password" type="password">
+    <input id="submit" type="submit" value="Sign in now">
+  </fieldset>
 </form>
