--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,4 +1,4 @@
-<form action="/sessions/registration" method="post">
+<form action="/sessions/sign_up" method="post">
   <fieldset>
     <legend>Sign up to Chitter</legend>
     <label>Email:</label><input type="text" name="email"><br>
