--- a/app/public/css/flash_notices.css
+++ b/app/public/css/flash_notices.css
@@ -1,9 +1,12 @@
 #flash {
+  padding-top: 1em;
+  padding-bottom: 1em;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
 
-#errors, #notices {
+#errors, #notice {
   font-weight: bold;
 }
 
@@ -11,7 +14,7 @@
   color: red;
 }
 
-#notices {
+#notice {
   color:  blue;
 }
 
