refactoring of style and got post peep text to work again html issue

--- a/app/public/css/fieldset.css
+++ b/app/public/css/fieldset.css
@@ -26,3 +26,8 @@ fieldset > #submit {
       text-decoration: none;
       padding: 5px;
 }
+
+textarea, #compose-peep-form, #compose-reply-form {
+  margin-left: 10%;
+  margin-top: 2em;
+}
